@@ -1,3 +1,8 @@
+2004-11-01  Todd Berman  <tberman@off.net>
+
+	* CSharpBindingExecutionManager.cs.in: Add fu to actually properly run
+	the execute script.
+
 2004-09-25  Peter Johanson <latexer@gentoo.org>
 
 	* CSharpBindingCompilerManager.cs: Hack to a hack to fix compilation
